# Android-Neon-ML

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jiwon/neon_simd/: DotProductTest.kt  ExampleInstrumentedTest.kt  NeonTest.kt  OperationsTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_array.hpp  jni_array_ops.cpp  native-lib.cpp  neon_math.hpp  neon_ops.cpp
app/src/main/java/com/jiwon/neon_simd/: MainActivity.kt  Operations.kt
app/src/main/java/com/jiwon/neon_simd/helper/: TestHelper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/jiwon/neon_simd/: ExampleUnitTest.kt
app/src/test/java/com/jiwon/neon_simd/helper/: TestHelperTest.kt
gradle/wrapper/: gradle-wrapper.properties
